feat: update shell script